xpad (5.2.0-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Watch: re-add upstream signing key A6F2322B to the collection.

 -- JCF Ploemen (jcfp) <linux@jcf.pm>  Mon, 10 Dec 2018 17:37:42 +0000

xpad (5.1.0-1) unstable; urgency=medium

  * New upstream release.
  * Bump Standards-Version to 4.2.1 (from 4.1.0; no further changes).
  * Compat: bump to 11 (from 10) and set debhelper version accordingly.
  * Copyright:
    + bump years for upstream and packaging.
    + use https for copyright format URI.
  * Rules: remove '--with autoreconf' from dh sequencer, obsolete.
  * Remove trailing whitespaces from d/{changelog,control}.
  * Control:
    + add build-dep on libgl1-mesa-dev (for pkgconfig/gl.pc).
    + add explicit build-dep on libglib2.0-dev (to enforce a required
      minimum version, see upstream rev. 961).
    + bump version for gtk-related build-deps to 3.22 (from 3.10).
  * Watch: add extra gpg key (0C4280A0) to d/upstream/signing-key.asc,
    used by upstream alongside existing key (951FC552).

 -- JCF Ploemen (jcfp) <linux@jcf.pm>  Tue, 23 Oct 2018 15:46:47 +0000

xpad (5.0.0-1) unstable; urgency=medium

  * New upstream release. (Closes: #872686)
    + fixes invisible selection with custom colors. (Closes: #849792)
    + fixes replacement of brackets in pad text. (Closes: #849828)
  * Bump Standards-Version to 4.1.0.0 (from 3.9.8; no further changes).
  * Compat: bump to 10 (from 9) and set debhelper version accordingly.
  * Control: remove build-dep on dh-autoreconf, redundant with dh 10.
  * Watch: update upstream gpg key (old: A6F2322B; new: 951FC552).
  * Patches: remove all, merged upstream.
  * Rules: add workaround for missing po/Makefile.in.in.
  * Add d/clean to cleanup po/Makefile.in.in created by intltoolize in
    d/rules.

 -- JCF Ploemen (jcfp) <linux@jcf.pm>  Tue, 22 Aug 2017 14:58:44 +0000

xpad (4.8.0-1) unstable; urgency=medium

  * New upstream release: (Closes: #805723) (LP: #1525656)