@@ -5,8 +5,3 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
 	dh $@
-
-override_dh_autoreconf:
-	dh_autoreconf
-	# workaround for missing po/Makefile.in.in, stolen from upstream autogen.sh
-	intltoolize --force --copy --automake
